# daily-bot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  google_sheets.py  handlers.py  log_settings.py  main.py  notifications.py  pyproject.toml  requirements.txt  states.py  table_management.py
