[project]
# Поддержка Python 3.11 или выше.
requires-python = ">=3.11"

[tool.ruff]
# Исключите ряд часто игнорируемых каталогов.
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".vscode",
    ".idea",
]
# Установите максимальную длину строки 79.
line-length = 79

[tool.ruff.lint]
# Список кодов правил или префиксов для включения.
select = ["E4", "E7", "E9", "F"]
# Список кодов правил или префиксов для игнорирования.
ignore = []
# Список кодов правил или префиксов, которые можно исправить.
fixable = ["ALL"]
# Список кодов правил или префиксов, которые нельзя исправить.
unfixable = []
# Разрешить неиспользуемые переменные с префиксом подчеркивания.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Используйте двойные кавычки для строк.
quote-style = "double"
# Отступы делайте пробелами, а не табуляциями.
indent-style = "space"
# Автоматически определяет соответствующее окончание строки.
line-ending = "auto"
