[project]
requires-python = "==3.11"

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    ".vscode",
    ".idea",
]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
